Fix horizontal scroll

--- a/src/views/technologies/Technologies.scss
+++ b/src/views/technologies/Technologies.scss
@@ -27,6 +27,7 @@
 
 .headerContainer {
   composes: container from global;
+  overflow: hidden;
 }
 
 .headerRow {
